# PyLibSetuptools

./: README.md  pyproject.toml  setup.cfg  setup.py
src/: main.py
src/samplelib/: __init__.py
