[metadata]
name = samplelib
version = attr: src.library.__version__.__version__
description = "python package sample"
long_description = file: README.md
long_description_content_type = text/markdown
# license = file: LICENSE

[options]
package_dir = src/library
packages = find: 
# install_requires=
[options.packages.find]
where=src/library
