[metadata]
name = samplelib
version = attr: src.samplelib.__version__.__version__
description = "python package sample"
long_description = file: README.md
long_description_content_type = text/markdown
# license = file: LICENSE

[options]
package_dir = 
    = src
packages = find: 
# install_requires=
[options.packages.find]
where = src
exclude = test
